peac_dev/force-app/main/default/objects/Invoice__c/fields/Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>