peac_dev/force-app/main/default/objects/Invoice__c/fields/Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Dealer Account)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>