peac_dev/force-app/main/default/objects/Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <description>This field is used to store status of invoice.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>