peac_dev/force-app/main/default/objects/Invoice__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <label>Migrated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Xerox</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>