peac_dev/force-app/main/default/objects/Invoice__c/fields/Other_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Other_Invoiced__c</fullName>
    <label>Other Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>