peac_dev/force-app/main/default/objects/Invoice__c/fields/Service_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Received__c</fullName>
    <label>Pass Through Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>