peac_dev/force-app/main/default/objects/Invoice__c/fields/Total_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced__c</fullName>
    <label>Total Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>