peac_dev/force-app/main/default/objects/Invoice__c/fields/Total_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Received__c</fullName>
    <label>Total Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>