peac_dev/force-app/main/default/objects/Invoice__c/fields/View_Invoice__c.field-meta.xml
<CustomField>
    <fullName>View_Invoice__c</fullName>
    <formula>IF(
    ISPICKVAL(Contract__r.Invoice_Format__c, &apos;ACH&apos;),
    NULL,
    HYPERLINK(&apos;/dealers/s/viewinvoicepdf?c__invoiceId=&apos; &amp;  Id, &quot;View Invoice&quot;, &quot;_self&quot;)
)</formula>
    <label>View Invoice</label>
    <type>Text</type>
</CustomField>