peac_dev/force-app/main/default/objects/Invoice__c/fields/View_InvoiceSF__c.field-meta.xml
<CustomField>
    <fullName>View_InvoiceSF__c</fullName>
    <formula>IF(
ISPICKVAL(Contract__r.Invoice_Format__c, &apos;ACH&apos;),
NULL,
HYPERLINK(&apos;/lightning/cmp/c__sL_ViewInvoicePdf?c__invoiceId=&apos; &amp; Id, &quot;View Invoice&quot;, &quot;_self&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Invoice</label>
    <type>Text</type>
</CustomField>