peac_dev/force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Due__c</columns>
    <columns>Link__c</columns>
    <columns>Contract__c</columns>
    <columns>Dealer_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>1529</value>
    </filters>
    <label>All</label>
</ListView>